--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,15 +1,17 @@
 <div class="container">
     <div class="row justify-content-center">
+        <h2 class="h5">Begin Session</h2>
+    </div>
+    <div class="row justify-content-center">
         <div class="col-sm-8 col-md-4 blanco">
            <div>
-                <form class="myForm" (ngSubmit)="onLogin(loginForm)" #loginForm="ngForm">
+                <form class="myForm" (ngSubmit)="Login(loginForm)" #loginForm="ngForm">
 
                     <mat-form-field>
-                        <mat-label>Email</mat-label>
-                        <input matInput type="email" placeholder="E-Mail" name="email" ngModel #emailInput="ngModel" required email>
-                        <mat-error *ngIf="!emailInput.value">Es obligatorio ingresar un mail</mat-error>
-                        <mat-hint *ngIf="emailInput.invalid && emailInput.value">Por favor ingrese un mail válido</mat-hint>
-                    </mat-form-field>
+                        <mat-label>Username</mat-label>
+                        <input matInput type="text" placeholder="Username" name="username" ngModel #usernameInput="ngModel" required>
+                        <mat-error *ngIf="!usernameInput.value">Username is required</mat-error>
+                        </mat-form-field>
 
                     <mat-form-field class="mt-3">
                         <mat-label>Password</mat-label>
@@ -17,13 +19,12 @@
                         <a mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                         </a>
-                        <mat-error *ngIf="passwordInput.invalid">Por favor ingrese una contraseña válida</mat-error>
+                        <mat-error *ngIf="!passwordInput.value">Password is required</mat-error>
+                        <mat-hint *ngIf="passwordInput.value && passwordInput.invalid">The specified password is invalid</mat-hint>
                     </mat-form-field>
 
-                    <button class="btn btn-secondary btn-block mt-5" type="submit">Ingresar</button>
-
-                    <mat-checkbox class="mt-3">Recordarme</mat-checkbox>
-
+                    <button class="btn btn-secondary btn-block mt-5" (click)="setUsuarioPrueba(loginForm)">Create</button>
+                    <button class="btn btn-secondary btn-block mt-5" type="submit">Login</button>
                 </form>
             </div>
 
