modificaciones estéticas en el login, e incorporación de funcionalidad en el controlador. Ahora funciona los valodadores de username y password

--- a/src/app/components/ships/ships.component.html
+++ b/src/app/components/ships/ships.component.html
@@ -1,1 +1,7 @@
-<p>ships works!</p>
+<div class="container">
+    <div class="row justify-content-center">
+        <h2 class="h5">Ships</h2>
+    </div>
+    <div class="row justify-content-center">
+    </div>
+</div>
