--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,13 +7,13 @@
            <div>
                 <form class="myForm" (ngSubmit)="Login(loginForm)" #loginForm="ngForm">
 
-                    <mat-form-field>
+                    <mat-form-field class="with-100">
                         <mat-label>Username</mat-label>
                         <input matInput type="text" placeholder="Username" name="username" ngModel #usernameInput="ngModel" required>
                         <mat-error *ngIf="!usernameInput.value">Username is required</mat-error>
-                        </mat-form-field>
+                    </mat-form-field>
 
-                    <mat-form-field class="mt-3">
+                    <mat-form-field class="mt-3 with-100">
                         <mat-label>Password</mat-label>
                         <input matInput [type]="hide ? 'password' : 'text'" placeholder="Password" name="password" ngModel #passwordInput="ngModel" required>
                         <a mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
@@ -23,8 +23,11 @@
                         <mat-hint *ngIf="passwordInput.value && passwordInput.invalid">The specified password is invalid</mat-hint>
                     </mat-form-field>
 
-                    <button class="btn btn-secondary btn-block mt-5" (click)="setUsuarioPrueba(loginForm)">Create</button>
-                    <button class="btn btn-secondary btn-block mt-5" type="submit">Login</button>
+                    <button class="btn btn-block mt-5 login text-white" type="submit">Begin Session</button>
+                    <br>
+                    <br>
+                    <p class="align-center">Don't have an account?</p>
+                    <button class="btn btn-block mt-1 create text-white" (click)="setUsuarioPrueba(loginForm)">Create Acount</button>
                 </form>
             </div>
 
