cambié de ubicación de la primer maquetación de las naves, porque el lugar correcto en en el componente starships-list. Además agregué navegabilidad a las opciones Login y Starships del header del sistema

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,9 +5,9 @@
     </div>
     <div class="col-4 align-right">
         <nav class="my-2 my-md-0 mr-md-3">
-          <a class="p-2 option-menu" href="#" *ngIf="true">Login</a>
+          <a class="p-2 option-menu" [routerLink]="'login'" *ngIf="true">Login</a>
           <a class="p-2 option-menu" href="#" *ngIf="false">Logout</a>
-          <a class="p-2 option-menu" href="#">Starships</a>
+          <a class="p-2 option-menu" [routerLink]="'ships'">Starships</a>
           <a class="p-2 option-menu" href="#">Planets</a>
         </nav>
     </div>
