--- a/src/app/components/ships/ships.component.html
+++ b/src/app/components/ships/ships.component.html
@@ -1,49 +1,1 @@
-<div class="container">
-    <div class="row justify-content-center">
-        <h2 class="h5">Ships</h2>
-    </div>
-    <div class="row justify-content-center">
-        <div class="col-lg-4 col-md-6 col-12 responsive">
-            <div class="gallery">
-                <img src="https://starwars-visualguide.com/assets/img/starships/9.jpg" width="600" height="400" alt="">
-                <div class="desc">Death Star</div>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-12 responsive">
-            <div class="gallery">
-                <img src="https://bostonparkingspaces.com/wp-content/themes/classiera/images/nothumb/nothumbpslider.png" width="600" height="400" alt="">
-                <div class="desc">Star Destroyer</div>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-12 responsive">
-            <div class="gallery">
-                <img src="https://starwars-visualguide.com/assets/img/starships/5.jpg" width="600" height="400" alt="">
-                <div class="desc">Sentinel-class landing craft</div>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-12 responsive">
-            <div class="gallery">
-                <img src="https://starwars-visualguide.com/assets/img/starships/5.jpg" width="600" height="400" alt="">
-                <div class="desc">Sentinel-class landing craft</div>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-12 responsive">
-            <div class="gallery">
-                <img src="https://starwars-visualguide.com/assets/img/starships/5.jpg" width="600" height="400" alt="">
-                <div class="desc">Sentinel-class landing craft</div>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-12 responsive">
-            <div class="gallery">
-                <img src="https://starwars-visualguide.com/assets/img/starships/5.jpg" width="600" height="400" alt="">
-                <div class="desc">Sentinel-class landing craft</div>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-12 responsive">
-            <div class="gallery">
-                <img src="https://starwars-visualguide.com/assets/img/starships/5.jpg" width="600" height="400" alt="">
-                <div class="desc">Sentinel-class landing craft</div>
-            </div>
-        </div>
-    </div>
-</div>
+<app-starships-list></app-starships-list>
