Creación del servicio Api.service.ts, es una clase abstracta que funciona como patrón repositorio, la cual provee a todas las clases que hereden de ella los verbos http para realizar llamadas. Por otra parte se crea un interceptor encargado de crear la url para las peticiones http conjuntamente con una hoja de recursos y los ambientes definidos en el archivo environments. Finalmente finalicé la integración de los components ships, starships-list y starship con las llamadas api.

--- a/src/app/components/ships/starships-list/starship/starship.component.html
+++ b/src/app/components/ships/starships-list/starship/starship.component.html
@@ -1,1 +1,2 @@
-<p>starship works!</p>
+<img [src]="starshipImage" onerror="this.src='assets/img/image-not-available.png';" *ngIf="starshipImage" width="600" height="400" alt="">
+<div class="desc" *ngIf="starshipName">{{ starshipName }}</div>
