--- a/src/app/components/ships/starships-list/starships-list.component.html
+++ b/src/app/components/ships/starships-list/starships-list.component.html
@@ -3,46 +3,9 @@
         <h2 class="h5">Ships</h2>
     </div>
     <div class="row justify-content-center">
-        <div class="col-lg-4 col-md-6 col-12 responsive">
+        <div *ngFor="let starship of starshipList" class="col-lg-4 col-md-6 col-12 responsive">
             <div class="gallery">
-                <img src="https://starwars-visualguide.com/assets/img/starships/9.jpg" width="600" height="400" alt="">
-                <div class="desc">Death Star</div>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-12 responsive">
-            <div class="gallery">
-                <img src="https://bostonparkingspaces.com/wp-content/themes/classiera/images/nothumb/nothumbpslider.png" width="600" height="400" alt="">
-                <div class="desc">Star Destroyer</div>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-12 responsive">
-            <div class="gallery">
-                <img src="https://starwars-visualguide.com/assets/img/starships/5.jpg" width="600" height="400" alt="">
-                <div class="desc">Sentinel-class landing craft</div>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-12 responsive">
-            <div class="gallery">
-                <img src="https://starwars-visualguide.com/assets/img/starships/5.jpg" width="600" height="400" alt="">
-                <div class="desc">Sentinel-class landing craft</div>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-12 responsive">
-            <div class="gallery">
-                <img src="https://starwars-visualguide.com/assets/img/starships/5.jpg" width="600" height="400" alt="">
-                <div class="desc">Sentinel-class landing craft</div>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-12 responsive">
-            <div class="gallery">
-                <img src="https://starwars-visualguide.com/assets/img/starships/5.jpg" width="600" height="400" alt="">
-                <div class="desc">Sentinel-class landing craft</div>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-12 responsive">
-            <div class="gallery">
-                <img src="https://starwars-visualguide.com/assets/img/starships/5.jpg" width="600" height="400" alt="">
-                <div class="desc">Sentinel-class landing craft</div>
+                <app-starship [starshipName]="starship.name" [starshipImage]="getShipImage(getShipId(starship.url))"></app-starship>
             </div>
         </div>
     </div>
