Se procedió a crear un un guard para permitir ingresar a la página de Ships únicamente a los usuarios autorizados, caso contrario te redirecciona al login. Por otra parte tomé la decisión de crear una página de planets que no será validada por el guard de autorización, es decir será accesible a cualquier usuario. Finalmente, en el header se implementó la navegabilidad a todas las páginas, y se incluyó un botón de logout.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,10 +5,10 @@
     </div>
     <div class="col-4 align-right">
         <nav class="my-2 my-md-0 mr-md-3">
-          <a class="p-2 option-menu" [routerLink]="'login'" *ngIf="true">Login</a>
-          <a class="p-2 option-menu" href="#" *ngIf="false">Logout</a>
           <a class="p-2 option-menu" [routerLink]="'ships'">Starships</a>
-          <a class="p-2 option-menu" href="#">Planets</a>
+          <a class="p-2 option-menu" [routerLink]="'planets'">Planets</a>
+          <a class="p-2 option-menu" [routerLink]="'login'" *ngIf="!authService.getIsAuth()">Login</a>
+          <a class="p-2 option-menu" href="#" *ngIf="authService.getIsAuth()" (click)="logout()">Logout</a>
         </nav>
     </div>
   </div>
