--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,8 @@
           <a class="p-2 option-menu" [routerLink]="'ships'">Starships</a>
           <a class="p-2 option-menu" [routerLink]="'planets'">Planets</a>
           <a class="p-2 option-menu" [routerLink]="'login'" *ngIf="!authService.getIsAuth()">Login</a>
-          <a class="p-2 option-menu" href="#" *ngIf="authService.getIsAuth()" (click)="logout()">Logout</a>
+          <a class="p-2 option-menu" href="#" *ngIf="authService.getIsAuth()" (click)="logout()"><i class="fa fa-sign-out pt-1"></i> Logout</a>
         </nav>
     </div>
+
   </div>
