Se incorporó la funcionalidad del botón más datos en los componentes ships y planets, y también agregué un botón scroll to top.

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,11 +23,11 @@
                         <mat-hint *ngIf="passwordInput.value && passwordInput.invalid">The specified password is invalid</mat-hint>
                     </mat-form-field>
 
-                    <button class="btn btn-block mt-5 login text-white" type="submit">Begin Session</button>
+                    <button class="btn btn-block mt-5 btn-brown text-white" type="submit">Begin Session</button>
                     <br>
                     <br>
                     <p class="align-center">Don't have an account?</p>
-                    <button class="btn btn-block mt-1 create text-white" (click)="setUsuarioPrueba(loginForm)">Create Acount</button>
+                    <button class="btn btn-block mt-1 btn-black text-white" (click)="setUsuarioPrueba(loginForm)">Create Acount</button>
                 </form>
             </div>
 
