--- a/src/app/components/planets/planets.component.html
+++ b/src/app/components/planets/planets.component.html
@@ -1,1 +1,8 @@
 <app-planets-list *ngIf="planets" [planetList]="planets"></app-planets-list>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-lg-4 col-md-3 col-12">
+            <button class="btn btn-block btn-black text-white mb-3" (click)="GetPlanets()">Más datos</button>
+        </div>
+    </div>
+</div>
