--- a/src/app/components/ships/ships.component.html
+++ b/src/app/components/ships/ships.component.html
@@ -1,1 +1,8 @@
 <app-starships-list *ngIf="starships" [starshipList]="starships"></app-starships-list>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-lg-4 col-md-3 col-12">
+            <button class="btn btn-block btn-black text-white mb-3" (click)="GetStarships()">Más datos</button>
+        </div>
+    </div>
+</div>
