--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -13,7 +13,7 @@
                         <mat-error *ngIf="!usernameInput.value">Username is required</mat-error>
                     </mat-form-field>
 
-                    <mat-form-field class="mt-3 with-100">
+                    <mat-form-field class="with-100">
                         <mat-label>Password</mat-label>
                         <input matInput [type]="hide ? 'password' : 'text'" placeholder="Password" name="password" ngModel #passwordInput="ngModel" required>
                         <a mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
@@ -23,11 +23,17 @@
                         <mat-hint *ngIf="passwordInput.value && passwordInput.invalid">The specified password is invalid</mat-hint>
                     </mat-form-field>
 
-                    <button class="btn btn-block mt-5 btn-brown text-white" type="submit">Begin Session</button>
+                    <button class="btn btn-secondary btn-block btn-secondary mt-3 btn-brown text-white"
+                            type="submit">
+                            Begin Session
+                    </button>
                     <br>
                     <br>
                     <p class="align-center">Don't have an account?</p>
-                    <button class="btn btn-block mt-1 btn-black text-white" (click)="setUsuarioPrueba(loginForm)">Create Acount</button>
+                    <button class="btn btn-secondary btn-block mt-1 btn-black text-white"
+                            (click)="goToRegister();">
+                            Create Acount
+                    </button>
                 </form>
             </div>
 
