modificaciones menores en los estilos de la pagina de registración

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -38,14 +38,14 @@
                     <div class="row justify-content-end mt-3 mr-1">
 
                         <button type="button"
-                                class="btn btn-outline-secondary mr-2 button-width"
+                                class="btn btn-outline-secondary mr-2 button-width text-black"
                                 [routerLink]="'login'">
                                 <i class="fa fa-arrow-circle-left mr-2"></i>
-                                <strong>Go back</strong>
+                                Go back
                         </button>
                         <button type="submit"
                                 class="btn btn-secondary btn-black text-white button-width">
-                                <strong>Register</strong>
+                                Register
                         </button>
 
                     </div>
