--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-spinner></app-spinner>
+<toaster-container [toasterconfig]="toasterconfig"></toaster-container>
 <ngx-scrolltop></ngx-scrolltop>
