--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 
+//== Toaster
+@import '~angular2-toaster/toaster.css';
+
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
