se creó la ficha con el detalle de las naves según las especificaciones

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -38,13 +38,13 @@
                     <div class="row justify-content-end mt-3 mr-1">
 
                         <button type="button"
-                                class="btn btn-outline-secondary mr-2 button-width text-black"
+                                class="btn btn-outline-dark mr-2 button-width"
                                 [routerLink]="'login'">
-                                <i class="fa fa-arrow-circle-left mr-2"></i>
-                                Go back
+                                <i class="fa fa-arrow-circle-left mr-1"></i>
+                                Back
                         </button>
                         <button type="submit"
-                                class="btn btn-secondary btn-black text-white button-width">
+                                class="btn btn-dark text-white button-width btn-black">
                                 Register
                         </button>
 
