--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,14 +1,14 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-5 bg-white border-bottom shadow-sm" bis_skin_checked="1">
-    <div class="col-4"></div>
-    <div class="col-4 align-center">
-        <img src="assets/img/logo.png" height="26px;" alt="">
+    <div class="col col-md-4"></div>
+    <div class="col col-md-4 align-center div-logo">
+        <img class="logo-imagen" src="assets/img/logo.png" height="26px;" alt="">
     </div>
-    <div class="col-4 align-right">
+    <div class="col-12 col-md-4 align-right">
         <nav class="my-2 my-md-0 mr-md-3">
           <a class="p-2 option-menu" [routerLink]="'ships'">Starships</a>
           <a class="p-2 option-menu" [routerLink]="'planets'">Planets</a>
           <a class="p-2 option-menu" [routerLink]="'login'" *ngIf="!authService.getIsAuth()">Login</a>
-          <a class="p-2 option-menu" href="#" *ngIf="authService.getIsAuth()" (click)="logout()"><i class="fa fa-sign-out pt-1"></i> Logout</a>
+          <a class="p-2 option-menu" *ngIf="authService.getIsAuth()" (click)="logout()"><i class="fa fa-sign-out pt-1"></i> Logout</a>
         </nav>
     </div>
 
