--- a/src/styles.scss
+++ b/src/styles.scss
@@ -80,17 +80,23 @@ div.desc {
     text-align: center;
 }
 
-@media only screen and (max-width: 700px) {
-    .responsive {
-        width: 49.99999%;
-        margin: 6px 0;
-    }
-}
-
 @media only screen and (max-width: 500px) {
     .responsive {
         padding-left: 10px;
         width: 100%;
+    }
+    .div-logo {
+        text-align: left !important;
+    }
+    .logo-imagen {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .responsive {
+        width: 49.99999%;
+        margin: 6px 0;
     }
 }
 
@@ -129,4 +135,8 @@ button.btn-black {
 
 .float-right {
     float:right;
+}
+
+.float-left {
+    float: left !important;
 }
